validation tests implemented

--- a/BiscuitMaker/BiscuitMaker/BiscuitMaker.csproj
+++ b/BiscuitMaker/BiscuitMaker/BiscuitMaker.csproj
@@ -1,7 +1,77 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <ProjectGuid>{D2EF40C5-F7F3-40E4-ADBB-CD87554ADA1C}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>BiscuitMaker</RootNamespace>
+    <AssemblyName>BiscuitMaker</AssemblyName>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <FileAlignment>512</FileAlignment>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
-
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
+    <Optimize>false</Optimize>
+    <OutputPath>bin\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <DebugType>pdbonly</DebugType>
+    <Optimize>true</Optimize>
+    <OutputPath>bin\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <ItemGroup>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="BiscuitMakerFactory.cs" />
+    <Compile Include="Enumerations\SwitchState.cs" />
+    <Compile Include="EventArgs\OnClockTickEventArgs.cs" />
+    <Compile Include="EventArgs\OnMotorPulseEventArgs.cs" />
+    <Compile Include="EventArgs\OnSwitchOffEventArgs.cs" />
+    <Compile Include="EventArgs\OnSwitchOnEventArgs.cs" />
+    <Compile Include="EventArgs\OnSwitchPauseEventArgs.cs" />
+    <Compile Include="EventArgs\OnWorkingTempReachedEventArgs.cs" />
+    <Compile Include="Interfaces\IBiscuitComponent.cs" />
+    <Compile Include="Managers\BiscuitMakerManager.cs" />
+    <Compile Include="Managers\BiscuitMakerSettingsValidator.cs" />
+    <Compile Include="Managers\ConveyorManager.cs" />
+    <Compile Include="Managers\Extruder.cs" />
+    <Compile Include="Managers\Motor.cs" />
+    <Compile Include="Managers\OvenManager.cs" />
+    <Compile Include="Managers\Stamper.cs" />
+    <Compile Include="Managers\Switcher.cs" />
+    <Compile Include="Models\Biscuit.cs" />
+    <Compile Include="Models\BiscuitBucket.cs" />
+    <Compile Include="Models\BiscuitMaker.cs" />
+    <Compile Include="Models\BiscuitMakerSettings.cs" />
+    <Compile Include="Models\Clock.cs" />
+    <Compile Include="Models\Conveyor.cs" />
+    <Compile Include="Models\Oven.cs" />
+    <Compile Include="Models\Switch.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Interfaces\Interfaces.txt" />
+    <Content Include="Managers\Managers.txt" />
+    <Content Include="Models\Models.txt" />
+  </ItemGroup>
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
