--- a/BiscuitMaker/BiscuitMaker.Tests/BiscuitMaker.Tests.csproj
+++ b/BiscuitMaker/BiscuitMaker.Tests/BiscuitMaker.Tests.csproj
@@ -71,6 +71,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Tests.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
