--- a/BiscuitMaker/BiscuitMakerConsole/App.config
+++ b/BiscuitMaker/BiscuitMakerConsole/App.config
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup>
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+  <appSettings>
+    <add key="ConveyorSize" value="6"/>
+    <add key="OvenMaxTemp" value="240"/>
+    <add key="OvenMinTemp" value="220"/>
+    <add key="OvenHeatingRate" value="10"/>
+    <add key="OvenCoolingRate" value="10"/>
+    <add key="ExtruderIndex" value="0"/>
+    <add key="StamperIndex" value="1"/>
+    <add key="OvenIndex" value="3"/>
+    <add key="OvenSize" value="2"/>
+    <add key="RoomTemperature" value="22"/>
+    <add key="RevolutionsPerTick" value="1"/>
+  </appSettings>
 </configuration>
