--- a/BiscuitMaker/BiscuitMakerConsole/BiscuitMakerConsole.csproj
+++ b/BiscuitMaker/BiscuitMakerConsole/BiscuitMakerConsole.csproj
@@ -55,5 +55,8 @@
       <Name>BiscuitMaker</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="BiscuitMakerConsole.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
